# Evolution

libs/genetic-algorithm/: Cargo.toml
libs/genetic-algorithm/src/: chromosome.rs  crossover.rs  lib.rs  selection.rs  statistics.rs
libs/genetic-algorithm/src/crossover/: uniform.rs
libs/genetic-algorithm/src/mutation/: gaussian.rs
libs/genetic-algorithm/src/selection/: roulette_wheel.rs
libs/neural-network/: Cargo.toml
libs/neural-network/src/: layer.rs  layer_topology.rs  lib.rs  neuron.rs
libs/optimizer/src/: analyze.rs  common.rs  main.rs  simulate.rs
libs/simulation/: Cargo.toml
libs/simulation-wasm/: Cargo.toml
libs/simulation-wasm/src/: animal.rs  food.rs  lib.rs  world.rs
libs/simulation/src/: animal.rs  animal_individual.rs  brain.rs  config.rs  eye.rs  food.rs  lib.rs  statistics.rs  world.rs
www/: bootstrap.js  index.css  index.html  index.js  package-lock.json  package.json
